# hermes

./: build.gradle  gradle.properties  hermes_write_test.txt  local.properties
.github/workflows/: android-build.yml  android-latest-build.yml  backend-latest-check.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
apps/: INDEX.md  LATEST_APP_PATH.txt
apps/20260720-habittracker/android/: .gitignore  settings.gradle.kts
apps/20260720-habittracker/android/app/: build.gradle.kts
apps/20260720-habittracker/android/app/src/main/: AndroidManifest.xml
apps/20260720-habittracker/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/20260720-habittracker/backend/app/: db.py  main.py  models.py
apps/20260720-habittracker/backend/tests/: test_main.py
apps/20260720-habittracker/docs/: RESEARCH.md  SPEC.md  STATE.md  TASKS.md
apps/20260720-habittracker/infra/: docker-compose.yml
templates/android_offline_starter/android/: settings.gradle.kts
templates/android_offline_starter/android/app/: build.gradle.kts
templates/android_offline_starter/android/app/src/main/: AndroidManifest.xml
templates/fullstack_starter/android/: build.gradle.kts
templates/fullstack_starter/android/app/: build.gradle.kts
templates/fullstack_starter/android/app/src/main/: AndroidManifest.xml
templates/fullstack_starter/backend/: Dockerfile  README.md  pyproject.toml
templates/fullstack_starter/backend/app/: models.py
templates/fullstack_starter/infra/: docker-compose.yml
(+13 files in other folders)
